car brand add functionality

--- a/cartuning/src/app/tuning/car-brand-edit/car-brand-edit.component.html
+++ b/cartuning/src/app/tuning/car-brand-edit/car-brand-edit.component.html
@@ -1,13 +1,13 @@
 
 <form [formGroup]="carFormGroup">
 
-    <mat-form-field>
+    <mat-form-field class="w-100">
         <mat-label>Car brand</mat-label>
         <input matInput formControlName="name">
     </mat-form-field>
     
     
-    <mat-form-field>
+    <mat-form-field class="w-100" appearence='fill'>
         <mat-label>Icon path</mat-label>
         <input matInput formControlName="iconPath">
     </mat-form-field>
