car model & make functionality

--- a/cartuning/src/app/tuning/tuning-edit-dialog/tuning-edit-dialog.component.html
+++ b/cartuning/src/app/tuning/tuning-edit-dialog/tuning-edit-dialog.component.html
@@ -1,5 +1,9 @@
 <div mat-dialog-content>
-    <app-car-brand-edit [carBrand]='editObject' (carBrandEdited)="carBrandEdited($event)"></app-car-brand-edit>
+    <ng-container [ngSwitch]="method">
+        <app-car-brand-edit *ngSwitchCase="'BRAND'" [carBrand]="editObject" (carBrandEdited)="objectEdited($event)"></app-car-brand-edit>
+        <app-car-model-edit *ngSwitchCase="'MODEL'" [carModel]="editObject" (carModelEdited)="objectEdited($event)"></app-car-model-edit>
+        <app-car-make-edit *ngSwitchCase="'MAKE'" [carMake]="editObject" (carMakeEdited)="objectEdited($event)"></app-car-make-edit>
+    </ng-container>
 </div>
 
 <div mat-dialog-actions>
