--- a/cartuning/src/app/tuning/tuning.component.html
+++ b/cartuning/src/app/tuning/tuning.component.html
@@ -9,7 +9,7 @@
                 <ng-template matStepLabel>{{selectedCar != null ? selectedCar.name : "Brand"}}</ng-template>
 
                 <div class="mb-3">
-                    <button mat-raised-button (click)="openAddCarDialog()">Add Car Brand</button>
+                    <button mat-raised-button (click)="openAddCarBrandDialog()">Add Car Brand</button>
                 </div>
 
                 <div class="row">
@@ -17,20 +17,18 @@
                         <div class="car-card" (click)="selectCar(car); false">
                             <div class="d-flex justify-content-end mr-2 mt-2">
                                 <button mat-mini-fab style="cursor: pointer; width: 20px; height: 20px;"
-                                    class="d-flex align-items-center justify-content-center" 
-                                    color='primary'
-                                    [matMenuTriggerFor]="menu"
-                                    clickStopPropagation>
+                                    class="d-flex align-items-center justify-content-center" color='primary'
+                                    [matMenuTriggerFor]="menu" clickStopPropagation>
                                     <span class="material-icons-round d-flex align-items-center justify-content-center"
-                                          style="font-size: 16px;">
+                                        style="font-size: 16px;">
                                         expand_more
                                     </span>
                                 </button>
 
                                 <mat-menu #menu="matMenu">
-                                    <button mat-menu-item (click)='openEditCarDialog(car)'>Edit</button>
-                                    <button mat-menu-item (click)='deleteCar(car)'>Delete</button>
-                                  </mat-menu>
+                                    <button mat-menu-item (click)='openEditCarBrandDialog(car)'>Edit</button>
+                                    <button mat-menu-item (click)='deleteCarBrand(car)'>Delete</button>
+                                </mat-menu>
                             </div>
                             <div class="text-center">
                                 <img [src]="car.icon" style="width: 102px; height: 102px; margin: 0">
@@ -46,15 +44,25 @@
             <mat-step [completed]="false">
                 <ng-template matStepLabel>{{selectedModel != null ? selectedModel.name : "Model"}}</ng-template>
 
+                <div class="mb-3">
+                    <button mat-raised-button (click)="openAddCarModelDialog()">Add Car Model</button>
+                </div>
+
                 <div class="row">
                     <div class="col-xl-3 col-md-4 col-sm-6 col-xs-12 mb-4" *ngFor='let carModel of selectedCar?.models'>
                         <div class="car-card" (click)="selectModel(carModel)">
-                            <div class="d-flex justify-content-end mr-2">
-                                <button mat-mini-fab style="cursor: pointer; width: 24px; height: 24px;"
-                                    class="d-flex align-items-center justify-content-center">
+                            <div class="d-flex justify-content-end mr-2 mt-2">
+                                <button mat-mini-fab style="cursor: pointer; width: 20px; height: 20px;"
+                                    class="d-flex align-items-center justify-content-center" color='primary'
+                                    [matMenuTriggerFor]="menu" clickStopPropagation>
                                     <mat-icon style="font-size: 16px;"
-                                        class="d-flex align-items-center justify-content-center">edit</mat-icon>
+                                        class="d-flex align-items-center justify-content-center">expand_more</mat-icon>
                                 </button>
+
+                                <mat-menu #menu="matMenu">
+                                    <button mat-menu-item (click)='openEditCarModelDialog(carModel)'>Edit</button>
+                                    <button mat-menu-item (click)='deleteCarModel(carModel)'>Delete</button>
+                                </mat-menu>
                             </div>
                             <div class="text-center">
                                 <img [src]="carModel.icon" style="height: 102px; margin: 0">
@@ -75,23 +83,34 @@
                 <ng-template matStepLabel>{{selectedGeneration != null ? (selectedGeneration.startYear + " - " +
                     selectedGeneration.endYear) : "Version"}}</ng-template>
 
+                <div class="mb-3">
+                    <button mat-raised-button (click)="openAddCarMakeDialog()">Add Car Make</button>
+                </div>
+
                 <div class="row">
                     <div class="col-xl-3 col-md-4 col-sm-6 col-xs-12 mb-4"
-                        *ngFor='let carGeneration of selectedModel?.generations'>
-                        <div class="car-card" (click)="selectGeneration(carGeneration)">
+                        *ngFor='let carMake of selectedModel?.generations'>
+                        <div class="car-card" (click)="selectGeneration(carMake)">
                             <div class="d-flex justify-content-end mr-2">
                                 <button mat-mini-fab style="cursor: pointer; width: 24px; height: 24px;"
-                                    class="d-flex align-items-center justify-content-center">
+                                    class="d-flex align-items-center justify-content-center"
+                                    color="primary"
+                                    [matMenuTriggerFor]="menu" clickStopPropagation>
                                     <mat-icon style="font-size: 16px;"
-                                        class="d-flex align-items-center justify-content-center">edit</mat-icon>
+                                        class="d-flex align-items-center justify-content-center">expand_more</mat-icon>
                                 </button>
+
+                                <mat-menu #menu="matMenu">
+                                    <button mat-menu-item (click)='openEditCarMakeDialog(carMake)'>Edit</button>
+                                    <button mat-menu-item (click)='deleteCarMake(carMake)'>Delete</button>
+                                </mat-menu>
                             </div>
                             <div class="text-center">
-                                <img [src]="carGeneration.icon" style="height: 102px; margin: 0">
+                                <img [src]="carMake.icon" style="height: 102px; margin: 0">
                             </div>
                             <div class="text-center" style="font-size: 12px; margin-top: 25px">
-                                {{carGeneration.startYear }} {{carGeneration.endYear == 'Infinity' ? '+' : ('- ' +
-                                carGeneration.endYear)}}
+                                {{carMake.startYear }} {{carMake.endYear == 'Infinity' ? '+' : ('- ' +
+                                carMake.endYear)}}
                             </div>
                         </div>
                     </div>
